--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="shuffle_btn">Shuffle</string>
     <string name="favourites_btn">Favourites</string>
     <string name="playlist_btn">PlayLists</string>
+    <string name="total_songs">Total Songs</string>
+    <string name="world_of_music">World of Music</string>
+    <string name="song_name">Song Name</string>
+    <string name="back_btn">Back</string>
+    <string name="start_tv">00:00</string>
+    <string name="end_tv">Loading..</string>
 </resources>
