--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="back_btn">Back</string>
     <string name="start_tv">00:00</string>
     <string name="end_tv">Loading..</string>
+    <string name="repeat_btn">Repeat</string>
+    <string name="equalizer_btn">Equalizer</string>
+    <string name="timer">Timer</string>
+    <string name="share">Share</string>
 </resources>
