--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Music Player</string>
     <string name="shuffle_btn">Shuffle</string>
     <string name="favourites_btn">Favourites</string>
@@ -13,4 +13,35 @@
     <string name="equalizer_btn">Equalizer</string>
     <string name="timer">Timer</string>
     <string name="share">Share</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
+    <string name="app_icon">Icon</string>
+    <string name="text_nav">Welcome to World of Music</string>
+    <string name="feedback">Feedback</string>
+    <string name="about">About</string>
+    <string name="setting">Setting</string>
+    <string name="exit">Exit</string>
+
+    <string name="song_album">Song Album</string>
+    <string name="min_15">15 Minutes</string>
+    <string name="min_30">30 Minutes</string>
+    <string name="min_60">60 Minutes</string>
+    <string name="search_view">Search View</string>
+    <string name="song_img">Song Image</string>
+    <string name="playlist_name">Playlist Name</string>
+    <string name="playlist_delete">Delete</string>
+    <string name="user_name">Your Name</string>
+    <string name="add_song">Add</string>
+    <string name="remove_all">Remove All</string>
+    <string name="search_song">Search Song</string>
+    <string name="topic_feedback">Topic i.e. Suggestion, Error, etc.</string>
+    <string name="email_feedback">Email Address (Optional)</string>
+    <string name="send">Send</string>
+    <string name="set_theme">Set Theme</string>
+    <string name="sort_by">Sort By</string>
+    <string name="version_name">Version Name</string>
+    <string name="play_next">Play Next</string>
+    <string name="play_next_note">Tip: Long Press On Any Video To Add It Into Play Next. &#128522; </string>
+    <string name="favourite_note">Tip: Play Music And Click On &#10084; To Add It Into Favourites. </string>
+    <string name="playlist_note">Tip: Click On ➕ To Create New Playlist. </string>
 </resources>
