--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="open">Open</string>
     <string name="close">Close</string>
     <string name="app_icon">Icon</string>
-    <string name="text_nav">Welcome to World of Music</string>
+    <string name="text_nav">Welcome to\nWorld of Music</string>
     <string name="feedback">Feedback</string>
     <string name="about">About</string>
     <string name="setting">Setting</string>
