--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <string name="app_name">Music Player</string>
     <string name="shuffle_btn">Shuffle</string>
     <string name="favourites_btn">Favourites</string>
-    <string name="playlist_btn">PlayLists</string>
+    <string name="playlist_btn">Playlists</string>
     <string name="total_songs">Total Songs</string>
     <string name="world_of_music">World of Music</string>
     <string name="song_name">Song Name</string>
@@ -11,17 +11,16 @@
     <string name="end_tv">Loading..</string>
     <string name="repeat_btn">Repeat</string>
     <string name="equalizer_btn">Equalizer</string>
-    <string name="timer">Timer</string>
-    <string name="share">Share</string>
+    <string name="timer_btn">Timer</string>
+    <string name="share_btn">Share</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
     <string name="app_icon">Icon</string>
     <string name="text_nav">Welcome to\nWorld of Music</string>
     <string name="feedback">Feedback</string>
+    <string name="settings">Settings</string>
     <string name="about">About</string>
-    <string name="setting">Setting</string>
     <string name="exit">Exit</string>
-
     <string name="song_album">Song Album</string>
     <string name="min_15">15 Minutes</string>
     <string name="min_30">30 Minutes</string>
@@ -44,6 +43,4 @@
     <string name="play_next_note">Tip: Long Press On Any Video To Add It Into Play Next. &#128522; </string>
     <string name="favourite_note">Tip: Play Music And Click On &#10084; To Add It Into Favourites. </string>
     <string name="playlist_note">Tip: Click On ➕ To Create New Playlist. </string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
