--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="settings_app_name">App Name</string>
     <string name="settings_version_tag">Unknown Version (Unknown VSC Version)</string>
     <string name="settings_contributors">Contributors</string>
+    <string name="concat" translatable="false"> • </string>
     <string name="play_next_note">Tip: Long Press On Any Video To Add It Into Play Next. &#128522; </string>
     <string name="favourite_note">Tip: Play Music And Click On &#10084; To Add It Into Favourites. </string>
     <string name="playlist_note">Tip: Click On ➕ To Create New Playlist. </string>
